turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:5: error: value Red is not a member of object java.awt.Color
			setCouleur(Color.Red)
                                         ^Source:11: error: value Black is not a member of object java.awt.Color
			setCouleur(Color.Black)
                                         ^