turtleart.lessons.turtleart.Main.DiskTwo.scala.code
override def run() {
	for (i<-1 to 18) {
		for (i<-1 to 360/18) {
			setCouleur(Color.Red)
			avance(100);
			recule(100);
			droite(1); 
		}
		for (i<-1 to 360/18) {
			setCouleur(Color.Black)
			avance(100);
			recule(100);
			droite(1); 
		}
	}
}
